# godot-dotnet

./: .gitignore  LICENSE  README.md
Godot.NET/: Godot.NET.sln  README.md  SdkPackageVersions.props
Godot.NET/GDExtensionGenerator/: GDExtensionGenerator.csproj  GlobalUsings.cs  HeaderGenerator.cs  JsonGenerator.cs  Program.cs  Util.cs  VariantGenerator.cs  win32_manifest.xml
Godot.NET/GDExtensionGenerator/Properties/: launchSettings.json
Godot.NET/Godot.NET.Sdk/: Godot.NET.Sdk.csproj
Godot.NET/Godot.NET.Sdk/Sdk/: Sdk.props  Sdk.targets
Godot.NET/Godot.Roslyn/: AssemblyHasClassesGenerator.cs  ClassInfoGenerator.cs  ClassNames.cs  ExportAttributeHandler.cs  ExtensionMethods.cs  GlobalClassAnalyzer.cs  Godot.Roslyn.csproj  GodotMethodInfo.cs  MustBeVariantAnalyzer.cs  PropertyExportExt.cs  PropertyHint.cs  Reporter.cs  TypeCache.cs
Godot.NET/GodotSharp/: BiHashMap.cs  CStringDB.cs  ClassDB.cs  GD.cs  GlobalUsings.cs  GodotObject.cs  GodotSharp.csproj  ProjectSettings.cs  RefCounted.cs  Resource.cs  ResourceLoader.cs  SName.cs  ScriptDB.cs  StringDB.cs  TypeDB.cs
Godot.NET/GodotSharp/Attributes/: AssemblyHasClasses.cs  ExportAttribute.cs  ExportCategoryAttribute.cs  ExportGroupAttribute.cs  ExportSubgroupAttribute.cs  ExposeAsAttribute.cs  GlobalClassAttribute.cs  IconAttribute.cs  InternalName.cs  MustBeVariantAttribute.cs  PreloadAttribute.cs  (+1 more)
Godot.NET/GodotSharpTests/: GodotSharpTests.csproj  Program.cs  SuperTestNode.cs
bootstrapper/: CMakeLists.txt  CMakePresets.json  README.md  dynlib.c  dynlib.h  loader.c  loader.h  test.c  typedefs.h
(+109 files in other folders)
